2004-10-22  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclNamesp.c (NsEnsembleImplementationCmd): Make
	ensembles cut their implementations out of error traces. This is
	the right thing to do more often than not.

2004-10-22  Kevin B. Kenny  <kennykb@acm.org>

	* library/clock.tcl: Fixed a typo where the fallback time zone
	became ::localtime instead of :localtime.  Fixed a bug where
	time zone names containing hyphens could not be loaded.
	* tests/clock.test: Added regression test cases that covers
	both bugs.
	Thanks to Todd M. Helfter <tmh@jumpgate.itsp.purdue.edu> for
	finding these bugs.
	
2004-10-22  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclExecute.c (TclCompEvalObj, Tcl_ExprObj): 
	* generic/tclProc.c (TclProcCompileProc): Always call object
	freeIntRepProc's in the same way.

2004-10-22  Miguel Sofer <msofer@users.sf.net>

	* generic/tclVar.c: fixed bug in commit of 2004-07-23, which was
	causing a leak of Proc structures and failure of compile-12.1. Two
	lines were 'zombies' from the previous way localVarNames
	worked. Credit dgp for finding this.

2004-10-21  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclInt.h (Interp):
	* generic/tclBasic.c (Tcl_CreateInterp,Tcl_DeleteInterp):
	* generic/tclResult.c (GetKeys,ReleaseKeys,etc.):
	Moved the key values of the return options dictionary out of
	private fields of the Interp struct and into thread-static
	values managed in tclResult.c.

	* generic/tclCmdAH.c (Tcl_CatchObjCmd, Tcl_ErrorObjCmd):
	Updated to call the new TclGet/SetReturnOptions routines to do
	much of their work.

	* generic/tclInt.h (TclGetReturnOptions,TclSetReturnOptions):
	* generic/tclResult.c (TclGetReturnOptions,TclSetReturnOptions):
	New utility routines to get/set the return options of an interp.
	Intent is that these routines will be converted to public routines
	after TIP approval.

	* generic/tclCmdMZ.c (TclProcessReturn,TclMergeReturnOptions):